# QT

./: .gitignore
MainQtModules/: .gitignore  CMakeLists.txt
QTPreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
QtDesigner/: mainwindow.ui
Stopwatch/: Stopwatch.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Task 2 MainQtModules/: main.cpp
Task 3 QtDesigner/: mainwindow.ui
Task 5 SignalSlot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Task 6 PreConcurrent/: CMakeLists.txt  ExampleRace.cpp  mainwindow.cpp
Task 8 DataBase/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task 9 PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
Widgets/: mainwindow.cpp  mainwindow.h  mainwindow.ui
build-MainQtModules-Desktop-Debug/: build.ninja
build-MainQtModules-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-f9a5cda45b4b4912e2ab.json  cmakeFiles-v1-1814fad35497d59f1f22.json  codemodel-v2-b76355479d386d6564a3.json  index-2023-08-10T14-33-25-0916.json
build-Widgets-Desktop-Debug/: Widgets
